--- a/wildfly/pom.xml
+++ b/wildfly/pom.xml
@@ -1,5 +1,4 @@
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>eu.europa.ec.fisheries.uvms</groupId>
     <artifactId>usm4uvms-wildfly</artifactId>
@@ -10,7 +9,7 @@
     <parent>
         <groupId>eu.europa.ec.fisheries.uvms</groupId>
         <artifactId>usm4uvms</artifactId>
-        <version>2.0.17-SNAPSHOT</version>
+        <version>2.0.17</version>
     </parent>
 
     <build>
