--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <groupId>eu.europa.ec.fisheries.uvms</groupId>
     <artifactId>usm4uvms</artifactId>
     <packaging>pom</packaging>
-    <version>2.0.17</version>
+    <version>2.0.18-SNAPSHOT</version>
     <name>usm4uvms</name>
     <description>USM integration for UnionVMS.</description>
 
@@ -40,7 +40,7 @@
 
     <scm>
         <connection>${scm.connection}</connection>
-        <tag>usm4uvms-2.0.17</tag>
+        <tag>HEAD</tag>
     </scm>
 
 
