--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <groupId>eu.europa.ec.fisheries.uvms</groupId>
     <artifactId>usm4uvms</artifactId>
     <packaging>jar</packaging>
-	<version>3.0.11-SNAPSHOT</version>     
+	<version>3.0.11</version>     
 	<name>usm4uvms</name>
       <description>USM integration for UnionVMS.</description>		      
       <properties>
@@ -72,7 +72,7 @@
 
     <scm>
       <connection>scm:git:https://github.com/UnionVMS/UVMS-USM4UVMSLibrary.git</connection>
-      <tag>HEAD</tag>
+      <tag>usm4uvms-3.0.11</tag>
   </scm>
 
     <dependencies>
