--- a/pom.xml
+++ b/pom.xml
@@ -186,6 +186,12 @@
             <groupId>org.jboss.resteasy</groupId>
             <artifactId>resteasy-jaxrs</artifactId>
             <version>${resteasy.version}</version>
+            <exclusions>
+            	<exclusion>
+            		  <groupId>org.jboss.spec.javax.annotation</groupId>
+  					  <artifactId>jboss-annotations-api_1.1_spec</artifactId>            		
+            	</exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.jboss.resteasy</groupId>
