--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <groupId>eu.europa.ec.fisheries.uvms</groupId>
     <artifactId>usm4uvms</artifactId>
     <packaging>jar</packaging>
-	<version>4.0.10</version>
+	<version>4.0.11-SNAPSHOT</version>
 	<name>usm4uvms</name>
       <description>USM integration for UnionVMS.</description>		      
       <properties>
@@ -69,7 +69,7 @@
 
     <scm>
       <connection>scm:git:https://github.com/UnionVMS/UVMS-USM4UVMSLibrary.git</connection>
-      <tag>usm4uvms-4.0.10</tag>
+      <tag>HEAD</tag>
   </scm>
 
     <dependencies>
