--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
         <commons.io.version>2.6</commons.io.version>
         <mockito.version>1.10.19</mockito.version>
         <usm.JWTokenHandler.version>2.1.1</usm.JWTokenHandler.version>
-        <uvms.commons.version>3.0.29</uvms.commons.version>
+        <uvms.commons.version>3.0.31-W14J8</uvms.commons.version>
     </properties>
 
     <repositories>
