--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
@@ -12,7 +10,7 @@
 	<groupId>eu.europa.ec.fisheries.uvms</groupId>
 	<artifactId>usm4uvms</artifactId>
 	<packaging>jar</packaging>
-	<version>4.0.15-SNAPSHOT</version>
+	<version>4.0.15</version>
 	<name>usm4uvms</name>
 	<description>USM integration for UnionVMS.</description>
 	<properties>
@@ -154,7 +152,7 @@
 
 	<scm>
 		<connection>scm:git:https://github.com/UnionVMS/UVMS-USM4UVMSLibrary.git</connection>
-		<tag>HEAD</tag>
+		<tag>usm4uvms-4.0.15</tag>
 	</scm>
 
 	<build>
