--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	<groupId>eu.europa.ec.fisheries.uvms</groupId>
 	<artifactId>usm4uvms</artifactId>
 	<packaging>jar</packaging>
-	<version>4.0.20-SNAPSHOT</version>
+	<version>4.0.20</version>
 	<name>usm4uvms</name>
 	<description>USM integration for UnionVMS.</description>
 	<properties>
@@ -152,7 +152,7 @@
 
 	<scm>
 		<connection>scm:git:https://github.com/UnionVMS/UVMS-USM4UVMSLibrary.git</connection>
-		<tag>HEAD</tag>
+		<tag>usm4uvms-4.0.20</tag>
 	</scm>
 
 	<build>
