--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>fish.focus.uvms.maven</groupId>
 		<artifactId>uvms-pom</artifactId>
-		<version>1.24</version>
+		<version>2.6</version>
 	</parent>
 
 	<groupId>eu.europa.ec.fisheries.uvms</groupId>
@@ -13,8 +13,8 @@
 	<version>4.0.24-SNAPSHOT</version>
 	<name>usm4uvms</name>
 	<description>USM integration for UnionVMS.</description>
-	<properties>
 
+	<properties>
 		<!-- ================= -->
 		<!-- Global Properties -->
 		<!-- ================= -->
@@ -23,14 +23,14 @@
 		<scm.connection>scm:git:https://github.com/UnionVMS/UVMS-USM4UVMSLibrary.git</scm.connection>
 		<scm.url>scm:git:https://github.com/UnionVMS/UVMS-USM4UVMSLibrary.git</scm.url>
 
-		<javaee.version>8.0</javaee.version>
 		<ehcache.version>2.10.6</ehcache.version>
 		<arquillian.rest.version>1.0.0.Alpha4</arquillian.rest.version>
 		<resteasy.version>3.0.12.Final</resteasy.version>
 
-		<user.service.version>2.0.22</user.service.version>
+		<user.service.version>2.0.25</user.service.version>
 		<usm.JWTokenHandler.version>2.1.10</usm.JWTokenHandler.version>
-		<uvms.commons.version>4.0.4</uvms.commons.version>
+		<uvms.commons.version>4.0.13</uvms.commons.version>
+		<uvms.pom.version>2.6</uvms.pom.version>
 	</properties>
 
 	<repositories>
@@ -46,19 +46,19 @@
 			<dependency>
 				<groupId>fish.focus.uvms.maven</groupId>
 				<artifactId>uvms-pom-logging-deps</artifactId>
-				<version>1.24</version>
+				<version>${uvms.pom.version}</version>
 				<type>pom</type>
 			</dependency>
 			<dependency>
 				<groupId>fish.focus.uvms.maven</groupId>
 				<artifactId>uvms-pom-test-deps</artifactId>
-				<version>1.24</version>
+				<version>${uvms.pom.version}</version>
 				<type>pom</type>
 			</dependency>
 			<dependency>
 				<groupId>fish.focus.uvms.maven</groupId>
 				<artifactId>uvms-pom-arquillian-deps</artifactId>
-				<version>1.24</version>
+				<version>${uvms.pom.version}</version>
 				<type>pom</type>
 			</dependency>
 		</dependencies>
@@ -66,9 +66,8 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>javax</groupId>
-			<artifactId>javaee-api</artifactId>
-			<version>${javaee.version}</version>
+			<groupId>jakarta.platform</groupId>
+			<artifactId>jakarta.jakartaee-api</artifactId>
 			<scope>provided</scope>
 		</dependency>
 
