--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,14 @@
 		</dependency>
 
 		<dependency>
+			<groupId>fish.focus.uvms.maven</groupId>
+			<artifactId>uvms-pom-java11-deps</artifactId>
+			<version>${uvms.pom.version}</version>
+			<type>pom</type>
+			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
 			<groupId>eu.europa.ec.fisheries.uvms.user</groupId>
 			<artifactId>user-model</artifactId>
 			<version>${user.service.version}</version>
